--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "~2.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "doctrine/dbal": "~2.3"
+        "spatie/laravel-query-builder": "^1.17"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
